--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@tanstack/react-query": "^4.29.17",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
