--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@sanity/image-url": "^1.0.2",
     "@tanstack/react-query": "^4.29.17",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
@@ -20,6 +21,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "14.0.0",
+    "next-sanity": "^6.0.5",
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
