--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
     "@tanstack/react-query": "^4.29.17",
     "@types/node": "20.2.5",
