--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
