--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,23 +15,23 @@
     "@radix-ui/react-select": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
     "@tanstack/react-query": "^4.29.17",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
+    "next": "^14.0.3",
+    "next-sanity": "^6.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "next": "14.0.0",
-    "next-sanity": "^6.0.5",
-    "postcss": "^8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.9.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "2.8.8"
+    "postcss": "^8.4.31",
+    "prettier": "2.8.8",
+    "tailwindcss": "3.3.2",
+    "typescript": "^5.3.2"
   }
 }
