--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.2",
+    "@prisma/client": "^5.6.0",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
@@ -19,7 +20,8 @@
     "next-sanity": "^6.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0"
+    "react-icons": "^4.9.0",
+    "svix": "^1.14.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -31,6 +33,7 @@
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.31",
     "prettier": "2.8.8",
+    "prisma": "^5.6.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.3.2"
   }
