--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "stripe": "^14.7.0",
     "svix": "^1.14.0",
     "zustand": "^4.4.7"
   },
