--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
     "@tanstack/react-query": "^4.29.17",
+    "arc-carousel": "^1.1.0",
     "next": "^14.0.3",
     "next-sanity": "^6.0.5",
     "react": "18.2.0",
