--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@clerk/localizations": "^1.26.11",
     "@clerk/nextjs": "^4.27.2",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-avatar": "^1.0.4",
